--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index de acesso a todas as páginas </title>
     <link rel="stylesheet" href="reset.css">
-
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <header class="cabecalho"> 
-        <h1 id="titulo"> Mulheres da Tecnologia </h1>    
+    <header class="cabecalho">
+        <h1 id="titulo"> Mulheres da Tecnologia </h1>
     </header>
-        <nav class="menu">
-            <ul>
-                <li> <a href="ada.html"> Ada  </a></li>
-                <li> <a href=""> Grace </a> </li>
-                <li> <a href=""> Margareth </a> </li>
-                <li> <a href=""> Dorothy  </a></li>
-            </ul>
-        </nav>
+    <nav class="menu">
+        <ul>
+            <li> <a href="ada.html"> Ada </a></li>
+            <li> <a href="grace.html"> Grace </a> </li>
+            <li> <a href="margareth.html"> Margareth </a> </li>
+            <li> <a href="dorothy.html"> Dorothy </a></li>
+        </ul>
+    </nav>
     </header>
 </body>
+
 </html>
