--- a/dorothy.html
+++ b/dorothy.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <h1 id="titulo"> Dorothy Johnson Vaughan </h1>
+   
+    <header class="cabecalho">
+        <h1 id="titulo"> Dorothy Johnson Vaughan </h1>
+
+    </header>
+    
     <img src="img/Dorothy-Vaughan.webp" alt="Foto de Dorothy Johnson Vaughan" class="imgcentro">
     <p>Johnson Vaughan, nascida em Kansas City, 1910, foi matemática graduada pela Wilberforce University.</p>
 
@@ -23,6 +28,10 @@
 
     <p>Além disso, ela também é uma das mulheres destacada na história Estrelas Além do Tempo (Hidden Figures) que foi
     lançado nos cinemas.</p>
+       <footer>
+        <button> <a href="index.html">Volte aqui!</a> </button>
+       </footer>
+
 </body>
 
 </html>
