--- a/dorothy.html
+++ b/dorothy.html
@@ -10,27 +10,28 @@
 </head>
 
 <body>
-   
+
     <header class="cabecalho">
         <h1 id="titulo"> Dorothy Johnson Vaughan </h1>
 
     </header>
-    
+
     <img src="img/Dorothy-Vaughan.webp" alt="Foto de Dorothy Johnson Vaughan" class="imgcentro">
     <p>Johnson Vaughan, nascida em Kansas City, 1910, foi matemática graduada pela Wilberforce University.</p>
 
     <p>Durante seus 28 anos de carreira na NASA, foi chefe de um grupo de trabalho formado apenas por mulheres negras e
-    matemáticas, e tornou-se a primeira supervisora negra.</p>
+        matemáticas, e tornou-se a primeira supervisora negra.</p>
 
     <p>Autodidata, especializou-se na linguagem de programação FORTRAN, e por isto liderou a seção de programação da
-    Divisão de Análise e Computação do Langley Research Center. Não é coisa pouca! Quem nunca sonhou em ser programadora
-    na NASA? A Dorothy realizou essa tarefa e participou de projetos muito importantes.</p>
+        Divisão de Análise e Computação do Langley Research Center. Não é coisa pouca! Quem nunca sonhou em ser
+        programadora
+        na NASA? A Dorothy realizou essa tarefa e participou de projetos muito importantes.</p>
 
     <p>Além disso, ela também é uma das mulheres destacada na história Estrelas Além do Tempo (Hidden Figures) que foi
-    lançado nos cinemas.</p>
-       <footer>
+        lançado nos cinemas.</p>
+    <footer>
         <button> <a href="index.html">Volte aqui!</a> </button>
-       </footer>
+    </footer>
 
 
 
