--- a/dorothy.html
+++ b/dorothy.html
@@ -16,7 +16,7 @@
 
     </header>
 
-    <img src="img/Dorothy-Vaughan.webp" alt="Foto de Dorothy Johnson Vaughan" class="imgcentro">
+    <img src="img/Dorothy-Vaughan.webp" alt="Dorothy Johnson Vaughan" class="imgcentro">
     <p>Johnson Vaughan, nascida em Kansas City, 1910, foi matemática graduada pela Wilberforce University.</p>
 
     <p>Durante seus 28 anos de carreira na NASA, foi chefe de um grupo de trabalho formado apenas por mulheres negras e
@@ -29,8 +29,9 @@
 
     <p>Além disso, ela também é uma das mulheres destacada na história Estrelas Além do Tempo (Hidden Figures) que foi
         lançado nos cinemas.</p>
-    <footer>
-        <button> <a href="index.html">Volte aqui!</a> </button>
+    
+        <footer>
+            <button> <a href="index.html">Volte aqui!</a> </button>
     </footer>
 
 
