--- a/dorothy.html
+++ b/dorothy.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <header class="cabecalho">
         <h1 id="titulo"> Dorothy Johnson Vaughan </h1>
 
@@ -28,7 +27,8 @@
         na NASA? A Dorothy realizou essa tarefa e participou de projetos muito importantes.</p>
 
     <p>Além disso, ela também é uma das mulheres destacada na história Estrelas Além do Tempo (Hidden Figures) que foi
-        lançado nos cinemas.</p>
+        lançado nos cinemas.
+    </p>
     
         <footer>
             <button> <a href="index.html">Volte aqui!</a> </button>
