--- a/grace.html
+++ b/grace.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Grace Murray Hopper </title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <title>Grace Murray Hopper </title>
 </head>
 
 <body>
-    
-    <h1> Grace Murray Hopper </h1>
+    <header>
+        <h1 id="titulo"> Grace Murray Hopper </h1>
+
+    </header>
+
     <img src="img/Hopper-3 square.jpg" alt="Grace Murray Hopper" class="imgcentro">
     <p class="texto"> Grace Murray Hopper (Nova Iorque, 1906 - 1992) foi Ph.D. em Matemática, analista de sistemas da
         Marinha dos Estados Unidos nas décadas
@@ -29,6 +32,10 @@
         algumas das primeiras linguagens
         de programação baseadas em compilador. Isso mesmo: considerada uma das mães dos compiladores.
     </p>
+    
+    <footer>
+        <button> <a href="index.html">Volte aqui!</a> </button>
+    </footer>
 </body>
 
 </html>
