--- a/grace.html
+++ b/grace.html
@@ -16,7 +16,7 @@
     </header>
 
     <img src="img/Hopper-3 square.jpg" alt="Grace Murray Hopper" class="imgcentro">
-    <p class="texto"> Grace Murray Hopper (Nova Iorque, 1906 - 1992) foi Ph.D. em Matemática, analista de sistemas da
+    <p>Grace Murray Hopper (Nova Iorque, 1906 - 1992) foi Ph.D. em Matemática, analista de sistemas da
         Marinha dos Estados Unidos nas décadas
         de 1940 e 1950 e almirante.</p>
 
@@ -26,16 +26,16 @@
         linguagem que domina muitas áreas dos
         grandes bancos tem uma mulher com papel de protagonista.</p>
 
-    <p class="texto">No começo dos anos 1950 ela desenvolveu um compilador operacional, naquela época acreditava-se que
+    <p>No começo dos anos 1950 ela desenvolveu um compilador operacional, naquela época acreditava-se que
         computadores só podiam
         realizar operações aritméticas. Depois como diretora de programação automática, seu departamento divulgou
         algumas das primeiras linguagens
         de programação baseadas em compilador. Isso mesmo: considerada uma das mães dos compiladores.
     </p>
-    
+
     <footer>
         <button> <a href="index.html">Volte aqui!</a> </button>
     </footer>
-</body>
+
 
 </html>
