--- a/margareth.html
+++ b/margareth.html
@@ -24,7 +24,7 @@
     humanidade". Foi um grande passo para as mulheres também.</p>
 
 
-    <p class="texto"> Em 1986 ela fundou sua própria empresa, a Hamilton Technologies Inc com sede em Cambridge. Onde
+    <p> Em 1986 ela fundou sua própria empresa, a Hamilton Technologies Inc com sede em Cambridge. Onde
         desenvolveu seu paradigma para Sistemas e Design de Software, o Development Before the Fact. </p>
 
     <p> Além de ser creditada por ter criado o termo "engenharia de software", foi uma das desenvolvedoras dos conceitos
