--- a/margareth.html
+++ b/margareth.html
@@ -35,5 +35,7 @@
     <p> Foi premiada com a Medalha Presidencial da Liberdade pelo presidente dos EUA Barack Obama, maior honra a um
         civil daquele país. </p>
 </body>
-
+<footer>
+        <button> <a href="index.html">Volte aqui!</a> </button>
+    </footer>
 </html>
