--- a/dorothy.html
+++ b/dorothy.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="cabecalho">
-        <h1 id="titulo"> Dorothy Johnson Vaughan </h1>
+        <h1 class="titulo"> Dorothy Johnson Vaughan </h1>
 
     </header>
 
