--- a/grace.html
+++ b/grace.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1 id="titulo"> Grace Murray Hopper </h1>
+        <h1 class="titulo"> Grace Murray Hopper </h1>
 
     </header>
 
