--- a/ada.html
+++ b/ada.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="cabecalho">
-        <h1 id="titulo"> Ada Augusta King </h1>
+        <h1 class="titulo"> Ada Augusta King </h1>
 
     </header>
 
