--- a/margareth.html
+++ b/margareth.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 id="titulo"> Margaret Heafield Hamilton </h1>
+    <h1 class="titulo"> Margaret Heafield Hamilton </h1>
 
     <img src="img/Margaret_Hamilton_1995.jpg"
         alt="Grupo de Formadores PC EM" class="imgcentro">
